🐛 FIX: Align classic editor images correctly (#160)

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -1749,6 +1749,11 @@ img {
 	max-width: 100%;
 }
 
+/* Classic editor images */
+.entry-content img {
+	max-width: 100%;
+}
+
 /* Make sure embeds and iframes fit their containers. */
 embed,
 iframe,
@@ -5262,10 +5267,6 @@ main * {
 
 footer * {
 	max-width: unset;
-}
-
-main img {
-	max-width: 100%;
 }
 
 html,
