--- a/assets/sass/07-utilities/measure.scss
+++ b/assets/sass/07-utilities/measure.scss
@@ -7,10 +7,6 @@ footer * {
 	max-width: var(--global--spacing-measure);
 }
 
-main img {
-	max-width: 100%;
-}
-
 html,
 body,
 div,
