--- a/style.css
+++ b/style.css
@@ -1225,6 +1225,11 @@ img {
 	max-width: 100%;
 }
 
+/* Classic editor images */
+.entry-content img {
+	max-width: 100%;
+}
+
 /* Make sure embeds and iframes fit their containers. */
 embed,
 iframe,
@@ -3982,10 +3987,6 @@ header *,
 main *,
 footer * {
 	max-width: var(--global--spacing-measure);
-}
-
-main img {
-	max-width: 100%;
 }
 
 html,
